[gd_scene load_steps=5 format=2]

[ext_resource path="res://TacticalSpaceCombat/Assets/Assets.svg" type="Texture" id=1]
[ext_resource path="res://TacticalSpaceCombat/Ship/Rooms/Room.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 32, 32 )

[node name="Room" type="Area2D" groups=[
"room",
]]
script = ExtResource( 2 )

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SpriteType" type="Sprite" parent="."]
visible = false
modulate = Color( 0.890196, 0.411765, 0.337255, 1 )
texture = ExtResource( 1 )
region_rect = Rect2( 128, 384, 32, 32 )

[node name="SpriteTarget" type="Sprite" parent="."]
visible = false
modulate = Color( 0.294118, 0.356863, 0.670588, 1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 384, 32, 32 )

[node name="1" type="Sprite" parent="SpriteTarget"]
visible = false
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 88, 384, 8, 8 )

[node name="2" type="Sprite" parent="SpriteTarget"]
visible = false
position = Vector2( 16, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 88, 392, 8, 8 )

[node name="3" type="Sprite" parent="SpriteTarget"]
visible = false
position = Vector2( 0, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 88, 400, 8, 8 )

[node name="4" type="Sprite" parent="SpriteTarget"]
visible = false
position = Vector2( -16, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 88, 408, 8, 8 )

[node name="O2ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0.690196, 0.188235, 0.360784, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feedback" type="NinePatchRect" parent="."]
visible = false
modulate = Color( 1, 0.709804, 0.439216, 1 )
margin_right = 64.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
region_rect = Rect2( 0, 416, 32, 32 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_area_entered_exited" binds= [ true ]]
[connection signal="area_exited" from="." to="." method="_on_area_entered_exited" binds= [ false ]]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered_exited" binds= [ true ]]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_entered_exited" binds= [ false ]]
